feat: authentication backend
